--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>insurance</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.richfaces.bom.version>4.1.0.Final</org.richfaces.bom.version>
@@ -42,6 +42,14 @@
 			<id>ICEFaces-snapshots</id>
 			<url>http://anonsvn.icefaces.org/repo/maven2/snapshots/</url>
 		</repository>
+
+		<repository>
+			<id>prime-repo</id>
+			<name>PrimeFaces Maven Repository</name>
+			<url>http://repository.primefaces.org</url>
+			<layout>default</layout>
+		</repository>
+
 	</repositories>
 
 	<!-- RichFaces Bill of Materials -->
@@ -83,6 +91,18 @@
 			<artifactId>richfaces-core-impl</artifactId>
 		</dependency>
 		<!-- end RichFaces stuff -->
+
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>3.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces-mobile</artifactId>
+			<version>0.9.3</version>
+		</dependency>
 
 		<!-- ICEFaces <dependency> <groupId>org.icefaces</groupId> <artifactId>icefaces</artifactId> 
 			<version>2.0.0</version> <exclusions> <exclusion> <groupId>com.sun.faces</groupId> 
